# holoworldrust

./: README.md
test/: index.js  package-lock.json
zomes/reader_writer/: zome.json
zomes/reader_writer/code/: .build  Cargo.toml
zomes/reader_writer/code/src/: lib.rs
